Make QTest::qWait() handle DeferredDelete event

The QTest::qWait() function does not handle DeferredDelete, in this case
all deleteLater() calls before the qWait() won't be processed during the
wait. Add an explicit sendPostedEvents(0, QEvent::DeferredDelete) to fix
this problem.

Task-number:QTBUG-22633
Change-Id: I2c5574b4e7d3c070fad6382dc36ddfd1dfac50d6
Reviewed-by: Jason McDonald <jason.mcdonald@nokia.com>

cregit: b4d23e61ed19c770caf6b993a8ab0e4474d3f417 https://github.com/qt/qtbase/commit/b4d23e61ed19c770caf6b993a8ab0e4474d3f417